
edge

* Allow to prefill the deployment descirption, see https://github.com/peritor/webistrano/issues/12 [tomfotherby]

* Update to Rails 2.3.5

* When cloning, also clone roles. Provided by Sergio Cambra.

* Update to Rails 2.3.4

* Users cannot be directly deleted anymore. They are disabled in order to not break references and keep the correct history.
  If you really want to delete a user you have to resort to the script/console or SQL for now. Fixes ticket #110.

* Move gems to vendor/gems and update Capistrano to 2.5.5 and Net::SSH to 2.0.11

* Update Rails to 2.2.2

* Add support to lookup configuration parameters in the definition of configuration parameters:
  set :foo, "123"
  set :bar, "a #{foo} here"
  
  Only works for configuration parameter (build-in like release_path or your own). DOES NOT EXECUTE CODE  

* Add Hash type to variables. Provided by sergio@entrecables.com #103

* Add locking. A running deployment locks the stage, so that no other deployment ca be run. Overridable by checkbox.

* Update Net::SSH to 2.0.10 and Capistrano to 2.5.4

* Add Thin template for Rails. Provided by Richard Piacentini

1.4

* Added CAS-auth support. Provided by Tim Shadel.

* Auto-scroll deployment log

* Ability to cancel running deployments. Refactor deployment status.

* Show recent deployments on the project page

* A deployment comment is no longer required, it is optional from now on

* Track deployed revisions

* Rename 'www' role to 'web' to match Capistrano, #91 by sergio@entrecables.com

* Support array values for configuration paramters, #93 by paradise

* Update Capistrano to 2.5.0

* Update to Rails 2.1.1

* Allow to clone a project. Stages and configuration is cloned for now. Closes #85

* Add Recipe versioning with version_fu. Provided by Mathias Meyer

* Add /projects/1/stages/1/deployments/latest. Provided by Mathias Meyer

* Fix XML output of stage tasks. Provided by Mathias Meyer

* Add version info XML action. Provided by Mathias Meyer
